--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -21,7 +21,9 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="0dp"
+            android:background="#00000000"
             android:scaleType="fitCenter"
+            android:src="@drawable/netflix_icon"
             />
 
         <TextView
