--- a/app/src/main/res/layout/activity_configure_subscription.xml
+++ b/app/src/main/res/layout/activity_configure_subscription.xml
@@ -29,6 +29,7 @@ tools:context=".ConfigureSubscription"
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp"
     android:text="$0.00"
+    android:maxLines="1"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.504"
     app:layout_constraintStart_toStartOf="parent"
@@ -48,13 +49,16 @@ tools:context=".ConfigureSubscription"
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name"
             android:textStyle="bold"
             android:textSize="7pt"
+            android:maxLines="1"
             />
 
         <EditText
@@ -62,6 +66,7 @@ tools:context=".ConfigureSubscription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="'Netflix'"
+            android:maxLines="1"
             android:textAlignment="textEnd"
             android:textColor="#989898" />
 
@@ -77,7 +82,8 @@ tools:context=".ConfigureSubscription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="3dp">
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -91,6 +97,7 @@ tools:context=".ConfigureSubscription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="'Entertainment'"
+            android:maxLines="1"
             android:textAlignment="textEnd"
             android:textColor="#989898" />
 
@@ -106,7 +113,8 @@ tools:context=".ConfigureSubscription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="3dp">
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -115,11 +123,12 @@ tools:context=".ConfigureSubscription"
             android:textSize="7pt"
             />
 
-        <EditText
+        <TextView
             android:id="@+id/enter_color_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="'1 = Blue'"
+            android:maxLines="1"
             android:textAlignment="textEnd"
             android:textColor="#989898" />
 
@@ -135,7 +144,8 @@ tools:context=".ConfigureSubscription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="3dp">
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -144,11 +154,11 @@ tools:context=".ConfigureSubscription"
             android:textSize="7pt"
             />
 
-        <EditText
-            android:id="@+id/enter_firstbill_et"
+        <TextView
+            android:id="@+id/enter_firstbill_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="'29 Oct 2019'"
+            android:text="29 Oct 2019"
             android:textAlignment="textEnd"
             android:textColor="#989898" />
 
@@ -164,7 +174,8 @@ tools:context=".ConfigureSubscription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="3dp">
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -174,7 +185,7 @@ tools:context=".ConfigureSubscription"
             />
 
         <TextView
-            android:id="@+id/enter_cycle_et"
+            android:id="@+id/enter_cycle_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Every 2 Month(s)"
@@ -193,7 +204,8 @@ tools:context=".ConfigureSubscription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="3dp">
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -202,7 +214,7 @@ tools:context=".ConfigureSubscription"
             android:textSize="7pt"
             />
 
-        <EditText
+        <TextView
             android:id="@+id/enter_duration_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
