--- a/app/src/main/res/layout/activity_configure_subscription.xml
+++ b/app/src/main/res/layout/activity_configure_subscription.xml
@@ -251,6 +251,17 @@ tools:context=".ConfigureSubscription"
     </LinearLayout>
 </LinearLayout>
 
+    <Button
+        android:id="@+id/done_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:text="Done!"
+        android:textStyle="bold"
+        android:background="#0000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
