--- a/app/src/main/res/layout/activity_configure_subscription.xml
+++ b/app/src/main/res/layout/activity_configure_subscription.xml
@@ -9,7 +9,6 @@ android:background="@color/colorDarkBlue"
 tools:context=".ConfigureSubscription"
     android:id="@+id/configure_sub_layout"
     >
-
 <ImageButton
     android:id="@+id/add_icon_ibutton"
     android:layout_width="50dp"
@@ -35,221 +34,222 @@ tools:context=".ConfigureSubscription"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/add_icon_ibutton" />
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
-    android:orientation="vertical"
-    android:layout_marginTop="10dp"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/price_tag_et">
-
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Name"
-            android:textStyle="bold"
-            android:textSize="7pt"
-            android:maxLines="1"
-            />
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="8dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/price_tag_et">
 
-        <EditText
-            android:id="@+id/name_enter_et"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="'Netflix'"
-            android:maxLines="1"
-            android:textAlignment="textEnd"
-            android:textColor="#989898" />
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:orientation="horizontal">
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:text="Name"
+                android:textSize="7pt"
+                android:textStyle="bold" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:src="@drawable/horizontal_divider_bars"/>
+            <EditText
+                android:id="@+id/name_enter_et"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:text="'Netflix'"
+                android:textAlignment="textEnd"
+                android:textColor="#989898" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp">
-        <TextView
+        </LinearLayout>
+
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Description"
-            android:textStyle="bold"
-            android:textSize="7pt"
-            />
+            android:layout_margin="5dp"
+            android:src="@drawable/horizontal_divider_bars" />
 
-        <EditText
-            android:id="@+id/enter_description_et"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="'Entertainment'"
-            android:maxLines="1"
-            android:textAlignment="textEnd"
-            android:textColor="#989898" />
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:orientation="horizontal">
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Description"
+                android:textSize="7pt"
+                android:textStyle="bold" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:src="@drawable/horizontal_divider_bars"/>
+            <EditText
+                android:id="@+id/enter_description_et"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:text="'Entertainment'"
+                android:textAlignment="textEnd"
+                android:textColor="#989898" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp">
-        <TextView
+        </LinearLayout>
+
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Color"
-            android:textStyle="bold"
-            android:textSize="7pt"
-            />
+            android:layout_margin="5dp"
+            android:src="@drawable/horizontal_divider_bars" />
 
-        <TextView
-            android:id="@+id/enter_color_et"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="'1 = Blue'"
-            android:maxLines="1"
-            android:textAlignment="textEnd"
-            android:textColor="#989898" />
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:orientation="horizontal">
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Color"
+                android:textSize="7pt"
+                android:textStyle="bold" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:src="@drawable/horizontal_divider_bars"/>
+            <TextView
+                android:id="@+id/enter_color_et"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:text="'1 = Blue'"
+                android:textAlignment="textEnd"
+                android:textColor="#989898" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp">
-        <TextView
+        </LinearLayout>
+
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="First Bill"
-            android:textStyle="bold"
-            android:textSize="7pt"
-            />
+            android:layout_margin="5dp"
+            android:src="@drawable/horizontal_divider_bars" />
 
-        <TextView
-            android:id="@+id/enter_firstbill_tv"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="29 Oct 2019"
-            android:textAlignment="textEnd"
-            android:textColor="#989898" />
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:orientation="horizontal">
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="First Bill"
+                android:textSize="7pt"
+                android:textStyle="bold" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:src="@drawable/horizontal_divider_bars"/>
+            <TextView
+                android:id="@+id/enter_firstbill_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="29 Oct 2019"
+                android:textAlignment="textEnd"
+                android:textColor="#989898" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp">
-        <TextView
+        </LinearLayout>
+
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cycle"
-            android:textStyle="bold"
-            android:textSize="7pt"
-            />
+            android:layout_margin="5dp"
+            android:src="@drawable/horizontal_divider_bars" />
 
-        <TextView
-            android:id="@+id/enter_cycle_tv"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Every 2 Month(s)"
-            android:textAlignment="textEnd"
-            android:textColor="#989898" />
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:orientation="horizontal">
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cycle"
+                android:textSize="7pt"
+                android:textStyle="bold" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:src="@drawable/horizontal_divider_bars"/>
+            <TextView
+                android:id="@+id/enter_cycle_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Every 2 Month(s)"
+                android:textAlignment="textEnd"
+                android:textColor="#989898" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp">
-        <TextView
+        </LinearLayout>
+
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Duration"
-            android:textStyle="bold"
-            android:textSize="7pt"
-            />
+            android:layout_margin="5dp"
+            android:src="@drawable/horizontal_divider_bars" />
 
-        <TextView
-            android:id="@+id/enter_duration_et"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="'Forever'"
-            android:textAlignment="textEnd"
-            android:textColor="#989898" />
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:orientation="horizontal">
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Duration"
+                android:textSize="7pt"
+                android:textStyle="bold" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:src="@drawable/horizontal_divider_bars"/>
+            <TextView
+                android:id="@+id/enter_duration_et"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="'Forever'"
+                android:textAlignment="textEnd"
+                android:textColor="#989898" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="3dp">
-        <TextView
+        </LinearLayout>
+
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Remind Me!"
-            android:textStyle="bold"
-            android:textSize="7pt"
-            />
+            android:layout_margin="5dp"
+            android:src="@drawable/horizontal_divider_bars" />
 
-        <Switch
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/remind_me_switch"/>
+            android:layout_marginTop="3dp"
+            android:orientation="horizontal">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Remind Me!"
+                android:textSize="7pt"
+                android:textStyle="bold" />
+
+            <Switch
+                android:id="@+id/remind_me_switch"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
 
     <Button
         android:id="@+id/done_button"
